tests/ui/rfcs/rfc-2632-const-trait-impl/specializing-constness.stderr
error: cannot specialize on const impl with non-const impl
  --> $DIR/specializing-constness.rs:23:1
   |
LL | impl<T: Spec + Sup> A for T {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

